--- a/dataset/SnowflakeTable.json
+++ b/dataset/SnowflakeTable.json
@@ -10,7 +10,7 @@
 		"schema": [],
 		"typeProperties": {
 			"schema": "PUBLIC",
-			"table": "toUpper(first(split(item().name,'.')))"
+			"table": "@item().name"
 		}
 	},
 	"type": "Microsoft.DataFactory/factories/datasets"
