--- a/dataset/SnowDynamicDataset.json
+++ b/dataset/SnowDynamicDataset.json
@@ -10,7 +10,7 @@
 		"schema": [],
 		"typeProperties": {
 			"schema": {
-				"value": "@ParamSchemaName",
+				"value": "PUBLIC",
 				"type": "Expression"
 			},
 			"table": "@ParamTableName"
