Updating dataset: SnowDynamicDataset

--- a/dataset/SnowDynamicDataset.json
+++ b/dataset/SnowDynamicDataset.json
@@ -13,7 +13,10 @@
 				"value": "PUBLIC",
 				"type": "Expression"
 			},
-			"table": "@ParamTableName"
+			"table": {
+				"value": "@TableName",
+				"type": "Expression"
+			}
 		}
 	}
 }
