Updating dataset: SnowflakeTable

--- a/dataset/SnowflakeTable.json
+++ b/dataset/SnowflakeTable.json
@@ -10,7 +10,10 @@
 		"schema": [],
 		"typeProperties": {
 			"schema": "PUBLIC",
-			"table": "EMP"
+			"table": {
+				"value": "variables('TableName')",
+				"type": "Expression"
+			}
 		}
 	},
 	"type": "Microsoft.DataFactory/factories/datasets"
