--- a/dataset/SnowflakeTable.json
+++ b/dataset/SnowflakeTable.json
@@ -10,10 +10,7 @@
 		"schema": [],
 		"typeProperties": {
 			"schema": "PUBLIC",
-			"table": {
-				"value": "variables('TableName')",
-				"type": "Expression"
-			}
+			"table": "EMP"
 		}
 	},
 	"type": "Microsoft.DataFactory/factories/datasets"
