Updating pipeline: ARNPipeline2 Updating dataset: SnowflakeTable

--- a/dataset/SnowflakeTable.json
+++ b/dataset/SnowflakeTable.json
@@ -8,7 +8,7 @@
 		"parameters": {
 			"tablename": {
 				"type": "string",
-				"defaultValue": "tablename"
+				"defaultValue": "@toUpper(first(split(item().name,'.')))"
 			}
 		},
 		"annotations": [],
