Updating pipeline: ARNPipeline Updating dataset: BlobData Updating pipeline: ARNPipeline2 Updating pipeline: AzureSnowflake Pipeline

--- a/pipeline/AzureSnowflake Pipeline.json
+++ b/pipeline/AzureSnowflake Pipeline.json
@@ -69,6 +69,7 @@
 					],
 					"storeSettings": {
 						"type": "AzureBlobStorageReadSettings",
+						"recursive": true,
 						"enablePartitionDiscovery": false
 					},
 					"formatSettings": {
