--- a/pipeline/AzureSnowflake Pipeline.json
+++ b/pipeline/AzureSnowflake Pipeline.json
@@ -16,11 +16,8 @@
 				"userProperties": [],
 				"typeProperties": {
 					"dataset": {
-						"referenceName": "BlobData",
-						"type": "DatasetReference",
-						"parameters": {
-							"Filename": "EMP.csv"
-						}
+						"referenceName": "DelimitedText1",
+						"type": "DatasetReference"
 					},
 					"fieldList": [
 						"childItems"
@@ -70,7 +67,7 @@
 								"source": {
 									"type": "SnowflakeSource",
 									"query": {
-										"value": "select table_name from information_schema.tables where table_schema = 'PUBLIC' and table_name ='EMP'\n\n",
+										"value": "@concat('select * from information_schema.tables where table_schema = ''PUBLIC'' and table_name =''', toUpper(first(split(item().name,'.'))),'''')",
 										"type": "Expression"
 									},
 									"exportSettings": {
@@ -82,70 +79,6 @@
 									"type": "DatasetReference"
 								}
 							}
-						},
-						{
-							"name": "Copy data1",
-							"type": "Copy",
-							"dependsOn": [
-								{
-									"activity": "Lookup1",
-									"dependencyConditions": [
-										"Succeeded"
-									]
-								}
-							],
-							"policy": {
-								"timeout": "7.00:00:00",
-								"retry": 0,
-								"retryIntervalInSeconds": 30,
-								"secureOutput": false,
-								"secureInput": false
-							},
-							"userProperties": [],
-							"typeProperties": {
-								"source": {
-									"type": "DelimitedTextSource",
-									"storeSettings": {
-										"type": "AzureBlobStorageReadSettings",
-										"recursive": true,
-										"enablePartitionDiscovery": false
-									},
-									"formatSettings": {
-										"type": "DelimitedTextReadSettings"
-									}
-								},
-								"sink": {
-									"type": "SnowflakeSink",
-									"importSettings": {
-										"type": "SnowflakeImportCopyCommand"
-									}
-								},
-								"enableStaging": false
-							},
-							"inputs": [
-								{
-									"referenceName": "BlobCSV",
-									"type": "DatasetReference",
-									"parameters": {
-										"FileName": {
-											"value": "@activity('Lookup1').output.table_name",
-											"type": "Expression"
-										}
-									}
-								}
-							],
-							"outputs": [
-								{
-									"referenceName": "SnowDynamicDataset",
-									"type": "DatasetReference",
-									"parameters": {
-										"SnowFileName": {
-											"value": "toUpper(first(split(@activity('Lookup1').output.firstRow.tablen_name,'.')))",
-											"type": "Expression"
-										}
-									}
-								}
-							]
 						}
 					]
 				}
