Updating pipeline: AzureSnowflake Pipeline Updating dataset: BlobCSV Updating dataset: BlobData

--- a/pipeline/AzureSnowflake Pipeline.json
+++ b/pipeline/AzureSnowflake Pipeline.json
@@ -124,13 +124,10 @@
 							},
 							"inputs": [
 								{
-									"referenceName": "BlobCSV",
+									"referenceName": "BlobData",
 									"type": "DatasetReference",
 									"parameters": {
-										"FileName": {
-											"value": "@activity('Lookup1').output.table_name",
-											"type": "Expression"
-										}
+										"Filename": "EMP.csv"
 									}
 								}
 							],
