Updating pipeline: AzureSnowflake Pipeline Updating dataset: BlobInputCSV

--- a/pipeline/AzureSnowflake Pipeline.json
+++ b/pipeline/AzureSnowflake Pipeline.json
@@ -124,11 +124,8 @@
 							},
 							"inputs": [
 								{
-									"referenceName": "DelimitedText1",
-									"type": "DatasetReference",
-									"parameters": {
-										"Filename": "EMP.csv"
-									}
+									"referenceName": "BlobInputCSV",
+									"type": "DatasetReference"
 								}
 							],
 							"outputs": [
