--- a/pipeline/AzureSnowflake Pipeline.json
+++ b/pipeline/AzureSnowflake Pipeline.json
@@ -19,11 +19,14 @@
 						"referenceName": "BlobCSV_copy1",
 						"type": "DatasetReference",
 						"parameters": {
-							"FileName": "EMP.csv"
+							"FileName": {
+								"value": "@pipeline().parameters.FileName",
+								"type": "Expression"
+							}
 						}
 					},
 					"fieldList": [
-						"itemName"
+						"childItems"
 					],
 					"storeSettings": {
 						"type": "AzureBlobStorageReadSettings",
@@ -49,7 +52,7 @@
 				"userProperties": [],
 				"typeProperties": {
 					"items": {
-						"value": "@activity('Get Metadata1').output.childItems",
+						"value": "@activity('Get Metadata1').output.childitems",
 						"type": "Expression"
 					},
 					"isSequential": true,
@@ -127,7 +130,10 @@
 									"referenceName": "BlobData_copy1",
 									"type": "DatasetReference",
 									"parameters": {
-										"Filename": "EMP.csv"
+										"Filename": {
+											"value": "@item()",
+											"type": "Expression"
+										}
 									}
 								}
 							],
@@ -142,6 +148,11 @@
 				}
 			}
 		],
+		"parameters": {
+			"FileName": {
+				"type": "string"
+			}
+		},
 		"annotations": []
 	}
 }
