--- a/dataset/SnowflakeTable.json
+++ b/dataset/SnowflakeTable.json
@@ -20,7 +20,11 @@
 				"precision": 10,
 				"scale": 0
 			}
-		]
+		],
+		"typeProperties": {
+			"schema": "PUBLIC",
+			"table": "EMP"
+		}
 	},
 	"type": "Microsoft.DataFactory/factories/datasets"
 }
