Updating pipeline: BlobToSnowflakeParameterized

--- a/pipeline/BlobToSnowflakeParameterized.json
+++ b/pipeline/BlobToSnowflakeParameterized.json
@@ -67,7 +67,7 @@
 								"source": {
 									"type": "SnowflakeSource",
 									"query": {
-										"value": "@concat('select * from information_schema.tables where table_schema = ''PUBLIC'' and table_name =''', toUpper(first(split(item().name,'.'))),'''')",
+										"value": "@concat('select * from information_schema.tables where table_schema = ''ARN_LANDING'' and table_name =''', toUpper(first(split(item().name,'.'))),'''')",
 										"type": "Expression"
 									},
 									"exportSettings": {
