--- a/pipeline/BlobToSnowflakeParameterized.json
+++ b/pipeline/BlobToSnowflakeParameterized.json
@@ -142,7 +142,10 @@
 											"sink": {
 												"type": "SnowflakeSink",
 												"importSettings": {
-													"type": "SnowflakeImportCopyCommand"
+													"type": "SnowflakeImportCopyCommand",
+													"additionalCopyOptions": {
+														"ON_ERROR": "SKIP_FILE"
+													}
 												}
 											},
 											"enableStaging": false
