--- a/dataset/SnowDynamicDataset.json
+++ b/dataset/SnowDynamicDataset.json
@@ -15,7 +15,7 @@
 		"schema": [],
 		"typeProperties": {
 			"schema": {
-				"value": "PUBLIC",
+				"value": "ARN_LANDING",
 				"type": "Expression"
 			},
 			"table": {
