Updating pipeline: BlobToSnowflakeParameterized Updating dataset: SnowDynamicDataset

--- a/dataset/SnowDynamicDataset.json
+++ b/dataset/SnowDynamicDataset.json
@@ -8,6 +8,9 @@
 		"parameters": {
 			"SnowFileName": {
 				"type": "string"
+			},
+			"SnowSchemaName": {
+				"type": "string"
 			}
 		},
 		"annotations": [],
