Updating dataset: SnowDynamicDataset

--- a/dataset/SnowDynamicDataset.json
+++ b/dataset/SnowDynamicDataset.json
@@ -18,7 +18,7 @@
 		"schema": [],
 		"typeProperties": {
 			"schema": {
-				"value": "ARN_LANDING",
+				"value": "@dataset().SnowSchemaName",
 				"type": "Expression"
 			},
 			"table": {
