--- a/pipeline/BlobToSnowflakeParameterized.json
+++ b/pipeline/BlobToSnowflakeParameterized.json
@@ -164,6 +164,10 @@
 													"SnowFileName": {
 														"value": "@variables('TableName')",
 														"type": "Expression"
+													},
+													"SnowSchemaName": {
+														"value": "@pipeline().parameters.SCHEMA_NAME",
+														"type": "Expression"
 													}
 												}
 											}
