Updating pipeline: Snowflake_copy

--- a/pipeline/Snowflake_copy.json
+++ b/pipeline/Snowflake_copy.json
@@ -141,6 +141,7 @@
 											},
 											"sink": {
 												"type": "SnowflakeSink",
+												"preCopyScript": "USE SCHEMA ARN_LANDING;",
 												"importSettings": {
 													"type": "SnowflakeImportCopyCommand",
 													"additionalCopyOptions": {
