Updating pipeline: Snowflake_copy

--- a/pipeline/Snowflake_copy.json
+++ b/pipeline/Snowflake_copy.json
@@ -75,8 +75,18 @@
 									}
 								},
 								"dataset": {
-									"referenceName": "GetSnowSchema",
-									"type": "DatasetReference"
+									"referenceName": "SnowDynamicDataset",
+									"type": "DatasetReference",
+									"parameters": {
+										"SnowFileName": {
+											"value": "@variables('TableName')",
+											"type": "Expression"
+										},
+										"SnowSchemaName": {
+											"value": "@toUpper(first(split(item().name,'.')))",
+											"type": "Expression"
+										}
+									}
 								}
 							}
 						},
