--- a/pipeline/Snowflake_copy.json
+++ b/pipeline/Snowflake_copy.json
@@ -151,6 +151,10 @@
 											},
 											"sink": {
 												"type": "SnowflakeSink",
+												"preCopyScript": {
+													"value": "@{truncate table pipeline().parameters.SCHEMA_NAME.variables('TableName')}",
+													"type": "Expression"
+												},
 												"importSettings": {
 													"type": "SnowflakeImportCopyCommand",
 													"additionalCopyOptions": {
