Updating pipeline: Snowflake_copy

--- a/pipeline/Snowflake_copy.json
+++ b/pipeline/Snowflake_copy.json
@@ -152,7 +152,7 @@
 											"sink": {
 												"type": "SnowflakeSink",
 												"preCopyScript": {
-													"value": "@{truncate table pipeline().parameters.SCHEMA_NAME.variables('TableName')}",
+													"value": "truncate table @{pipeline().parameters.SCHEMA_NAME}.@{variables('TableName')} ",
 													"type": "Expression"
 												},
 												"importSettings": {
