--- a/pipeline/Snowflake_copy.json
+++ b/pipeline/Snowflake_copy.json
@@ -166,7 +166,7 @@
 											"logSettings": {
 												"enableCopyActivityLog": true,
 												"copyActivityLogSettings": {
-													"logLevel": "Info",
+													"logLevel": "Warning",
 													"enableReliableLogging": true
 												},
 												"logLocationSettings": {
