Updating pipeline: BlobToSnowflakeParameterized Updating dataset: BlobInputCSV Updating pipeline: Snowflake_copy Adding pipeline: ARNPipeline_copy1

--- a/pipeline/Snowflake_copy.json
+++ b/pipeline/Snowflake_copy.json
@@ -158,7 +158,7 @@
 												"importSettings": {
 													"type": "SnowflakeImportCopyCommand",
 													"additionalCopyOptions": {
-														"ON_ERROR": "CONTINUE"
+														"ON_ERROR": "ABORT_STATEMENT"
 													}
 												}
 											},
