--- a/pipeline/Snowflake_copy.json
+++ b/pipeline/Snowflake_copy.json
@@ -151,32 +151,14 @@
 											},
 											"sink": {
 												"type": "SnowflakeSink",
-												"preCopyScript": {
-													"value": "truncate table @{pipeline().parameters.SCHEMA_NAME}.@{variables('TableName')} ",
-													"type": "Expression"
-												},
 												"importSettings": {
 													"type": "SnowflakeImportCopyCommand",
 													"additionalCopyOptions": {
-														"ON_ERROR": "ABORT_STATEMENT"
+														"ON_ERROR": "SKIP_FILE"
 													}
 												}
 											},
-											"enableStaging": false,
-											"logSettings": {
-												"enableCopyActivityLog": true,
-												"copyActivityLogSettings": {
-													"logLevel": "Warning",
-													"enableReliableLogging": true
-												},
-												"logLocationSettings": {
-													"linkedServiceName": {
-														"referenceName": "AzureBlobStorageLinkedServices",
-														"type": "LinkedServiceReference"
-													},
-													"path": "errorlog"
-												}
-											}
+											"enableStaging": false
 										},
 										"inputs": [
 											{
