Updating pipeline: Snowflake_copy

--- a/pipeline/Snowflake_copy.json
+++ b/pipeline/Snowflake_copy.json
@@ -152,7 +152,7 @@
 											"sink": {
 												"type": "SnowflakeSink",
 												"preCopyScript": {
-													"value": "truncate table @{variables('TableName')}",
+													"value": "use schema PUBLIC;\ntruncate table @{variables('TableName')}",
 													"type": "Expression"
 												},
 												"importSettings": {
