Updating pipeline: Snowflake_copy1

--- a/pipeline/Snowflake_copy1.json
+++ b/pipeline/Snowflake_copy1.json
@@ -328,19 +328,16 @@
 					},
 					"ifTrueActivities": [
 						{
-							"name": "Copy data1",
-							"type": "Copy",
+							"name": "Set variable1",
+							"type": "SetVariable",
 							"dependsOn": [],
-							"policy": {
-								"timeout": "7.00:00:00",
-								"retry": 0,
-								"retryIntervalInSeconds": 30,
-								"secureOutput": false,
-								"secureInput": false
-							},
 							"userProperties": [],
 							"typeProperties": {
-								"enableStaging": false
+								"variableName": "JsonFileName",
+								"value": {
+									"value": "'File Found'",
+									"type": "Expression"
+								}
 							}
 						}
 					]
@@ -361,6 +358,9 @@
 				"type": "String"
 			},
 			"SchemaVar": {
+				"type": "String"
+			},
+			"JsonFileName": {
 				"type": "String"
 			}
 		},
