Updating pipeline: Snowflake_copy1

--- a/pipeline/Snowflake_copy1.json
+++ b/pipeline/Snowflake_copy1.json
@@ -323,7 +323,7 @@
 				"typeProperties": {
 					"variableName": "JsonFileName",
 					"value": {
-						"value": "@activity('Lookup1').output.$['CUST']",
+						"value": "@activity('Lookup1').output.[0]['CUST']",
 						"type": "Expression"
 					}
 				}
