--- a/pipeline/Snowflake_copy1.json
+++ b/pipeline/Snowflake_copy1.json
@@ -306,7 +306,7 @@
 						"referenceName": "ParamterFile",
 						"type": "DatasetReference"
 					},
-					"firstRowOnly": false
+					"firstRowOnly": true
 				}
 			},
 			{
@@ -324,7 +324,7 @@
 				"typeProperties": {
 					"variableName": "JsonFileName",
 					"value": {
-						"value": "@activity('Lookup1').output[0]",
+						"value": "@activity('Lookup1').output.firstRow",
 						"type": "Expression"
 					}
 				}
