Updating pipeline: Snowflake_copy1

--- a/pipeline/Snowflake_copy1.json
+++ b/pipeline/Snowflake_copy1.json
@@ -324,7 +324,7 @@
 				"typeProperties": {
 					"variableName": "JsonFileName",
 					"value": {
-						"value": "@activity('Lookup1').output.firstRow",
+						"value": "@activity('Lookup1').output.firstRow['CUST']",
 						"type": "Expression"
 					}
 				}
