--- a/pipeline/Snowflake_copy.json
+++ b/pipeline/Snowflake_copy.json
@@ -154,7 +154,7 @@
 												"importSettings": {
 													"type": "SnowflakeImportCopyCommand",
 													"additionalCopyOptions": {
-														"ON_ERROR": "ABORT_STATEMENT"
+														"ON_ERROR": "CONTINUE"
 													}
 												}
 											},
