Updating pipeline: Snowflake_copy2 Adding pipeline: Inputfilecheck

--- a/pipeline/Snowflake_copy2.json
+++ b/pipeline/Snowflake_copy2.json
@@ -303,27 +303,10 @@
 				}
 			},
 			{
-				"name": "ForEach1",
-				"type": "ForEach",
-				"dependsOn": [
-					{
-						"activity": "Lookup1",
-						"dependencyConditions": [
-							"Succeeded"
-						]
-					}
-				],
-				"userProperties": [],
-				"typeProperties": {
-					"activities": [
-						{
-							"name": "Set variable1",
-							"type": "SetVariable",
-							"dependsOn": [],
-							"userProperties": []
-						}
-					]
-				}
+				"name": "If Condition1",
+				"type": "IfCondition",
+				"dependsOn": [],
+				"userProperties": []
 			}
 		],
 		"parameters": {
@@ -343,7 +326,7 @@
 				"type": "String"
 			},
 			"JsonFileName": {
-				"type": "Array"
+				"type": "String"
 			}
 		},
 		"annotations": []
