--- a/dataset/DS_Source_SnowflakeTable.json
+++ b/dataset/DS_Source_SnowflakeTable.json
@@ -5,6 +5,9 @@
 			"referenceName": "Source_Snowflake",
 			"type": "LinkedServiceReference"
 		},
+		"folder": {
+			"name": "FUSION"
+		},
 		"annotations": [],
 		"type": "SnowflakeTable",
 		"schema": [
