--- a/dataset/DS_FUSION_SOURCE_SNOWFLAKE.json
+++ b/dataset/DS_FUSION_SOURCE_SNOWFLAKE.json
@@ -2,7 +2,7 @@
 	"name": "DS_FUSION_SOURCE_SNOWFLAKE",
 	"properties": {
 		"linkedServiceName": {
-			"referenceName": "Source_Snowflake",
+			"referenceName": "LS_FUSION_SOURCE_SNOWFLAKE",
 			"type": "LinkedServiceReference"
 		},
 		"folder": {
